switched sections to divs

--- a/threeColumn/index.html
+++ b/threeColumn/index.html
@@ -8,17 +8,17 @@
 	<header>
 		
 	</header>
-	<section id="col-left"/>
+	<div class="col-left"/>
 		
-	</section >
-	<section id="col-mid"/>
+	</div>
+	<div class="col-mid"/>
 		
-	</section >
-	<section id="col-right">
+	</div >
+	<div class="col-right">
 		
-	</section>
+	</div>
 
-	<footer>
+	<footer class="clearfix">
 		
 	</footer>
 
