--- a/threeColumn/index.html
+++ b/threeColumn/index.html
@@ -8,14 +8,16 @@
 	<header>
 		
 	</header>
-	<div class="col-left"/>
-		
-	</div>
-	<div class="col-mid"/>
-		
-	</div >
-	<div class="col-right">
-		
+	<div class="columns">
+		<div class="col-left"/>
+			
+		</div>
+		<div class="col-mid"/>
+			
+		</div >
+		<div class="col-right">
+			
+		</div>
 	</div>
 
 	<footer class="clearfix">
