--- a/magazine/index.html
+++ b/magazine/index.html
@@ -5,6 +5,49 @@
 	<title>magazine</title>
 </head>
 <body>
+<header>
+	<div class="pagename">
+	</div>
+
+	<div class="nav">
+		<div class="link"></div>
+		<div class="link"></div>
+		<div class="link"></div>
+		<div class="link"></div>
+		<div class="link"></div>
+	</div>
+</header>
+
+<aside>
+	<!-- left side of page-->
+</aside>
+
+<article>
+	<!-- top -->
+</article>
+
+<div class="section">
+	<section id="col-left">
+		
+	</section>
+	<section id="col-right">
+		
+	</section>
+
+</div>
+
+<div class="boxes">
+	<div id="b1"></div>
+	<div id="b2"></div>
+	<div id="b3"></div>
+	<div id="b4"></div>
+
+</div>
+
+<footer class="clearfix">
+	
+</footer>
+
 
 </body>
 </html>
