--- a/threeColumn/index.html
+++ b/threeColumn/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="css/style.css"/>
-	<title></title>
+	<title>column three</title>
 </head>
 <body>
 	<header>
